--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -5,35 +5,49 @@
 
 
 .clients__title {
-    @media screen and (min-width: 480px) {
-            margin-bottom: 30px;
-                font-weight: 700;
-                    font-size: 28px;
-                line-height: calc(33 / 28);
-                letter-spacing: 0.03em;
-                color: var(--secondary-title-color);
-                text-align: center;
-        }
+    margin-bottom: 30px;
     
-        @media screen and (min-width: 768px) {
-            margin-bottom: 30px;
-                font-weight: 700;
-                font-size: 28px;
-                line-height: calc(33 / 28);
-                letter-spacing: 0.03em;
-                color: var(--secondary-title-color);
-                text-align: center;
-        }
+        font-weight: 700;
+        font-size: 28px;
+        line-height: calc(33 / 28);
+        text-align: center;
+        color: var(--secondary-title-color) ;
     
         @media screen and (min-width: 1200px) {
             margin-bottom: 50px;
-                font-weight: 700;
-                font-size: 36px;
-                line-height: calc(42 / 36);
-                letter-spacing: 0.03em;
-                color: var(--secondary-title-color);
-                text-align: center;
+    
+            font-size: 36px;
+            line-height: calc(42 / 36);
         }
+    // @media screen and (min-width: 480px) {
+    //         margin-bottom: 30px;
+    //             font-weight: 700;
+    //                 font-size: 28px;
+    //             line-height: calc(33 / 28);
+    //             letter-spacing: 0.03em;
+    //             color: var(--secondary-title-color);
+    //             text-align: center;
+    //     }
+    
+    //     @media screen and (min-width: 768px) {
+    //         margin-bottom: 30px;
+    //             font-weight: 700;
+    //             font-size: 28px;
+    //             line-height: calc(33 / 28);
+    //             letter-spacing: 0.03em;
+    //             color: var(--secondary-title-color);
+    //             text-align: center;
+    //     }
+    
+    //     @media screen and (min-width: 1200px) {
+    //         margin-bottom: 50px;
+    //             font-weight: 700;
+    //             font-size: 36px;
+    //             line-height: calc(42 / 36);
+    //             letter-spacing: 0.03em;
+    //             color: var(--secondary-title-color);
+    //             text-align: center;
+    //     }
     
    
 }
