--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,11 +9,12 @@
 .header-container {
     display: flex;
     align-items: center;
+    
 }
 
 .header__logo {
 
-    @media screen and (min-width:480px) {
+    @media screen and (max-width:480px) {
         padding-top: 16px;
         padding-bottom: 16px;
     }
@@ -31,21 +32,80 @@
 
 .header__list {
 
-    @media screen and (max-width:480px) {
-            display: none;
-        }
+    display: flex;
+        flex-direction: column-reverse;
+        margin-top: auto;
+        margin-bottom: 64px;
+        @media screen and (max-width: 480px) {
+                display: none;
+            }
     
-        @media screen and (max-width:768px) {
-                  margin-left: auto;
-                display: flex;
-                flex-direction: column;
-        }
-    
-        @media screen and (min-width:1200px) {
+        @media screen and (min-width: 768px) {
+            flex-direction: column;
+            margin-top: 21px;
+            margin-bottom: 21px;
             margin-left: auto;
-                display: flex;
-                gap: 50px;
+            align-items: flex-start;
         }
     
+        @media screen and (min-width: 1200px) {
+            flex-direction: row;
     
+            margin-top: 0;
+            margin-bottom: 0;
+            margin-left: auto;
+            padding-top: 32px;
+            padding-bottom: 32px;
+        }
+    // @media screen and (max-width:480px) {
+    //         display: none;
+    //     }
+    
+    //     @media screen and (max-width:768px) {
+    //               margin-left: auto;
+    //             display: flex;
+    //             flex-direction: column;
+    //             align-items: flex-start;
+    //     }
+    
+    //     @media screen and (min-width:1200px) {
+    //         margin-left: auto;
+    //             display: flex;
+    //             gap: 50px;
+    //     }
+    
+    
+}
+
+.header__item{
+     font-weight: 500;
+        font-size: 24px;
+        line-height: calc(28 / 24);
+        letter-spacing: 0.02em;
+    
+        @media screen and (min-width: 768px) {
+            font-size: 12px;
+            line-height: calc(14 / 12);
+        }
+    
+        @media screen and (min-width: 1200px) {
+            font-size: 14px;
+            line-height: calc(16 / 14);
+        }
+}
+
+.header__item:not(:first-child){
+@media screen and (max-width: 767px) {
+        margin-bottom: 32px;
+    }
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 0;
+        margin-top: 10px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        margin-left: 50px;
+    }
 }
