--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,25 +1,45 @@
 .nav__list {
+  margin-bottom: calc((100vh / 2) - (48px * 2));
+  
+    @media screen and (min-width: 768px) {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0;
+    }
+  // display: flex;
+  //   gap: 50px;
+  //   align-items: center;
   @media screen and (max-width: 480px) {
     display: none;
   }
-  @media screen and (max-width: 768px) {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-  }
-  @media screen and (min-width: 1200px) {
-    display: flex;
-    gap: 50px;
-    align-items: center;
-  }
+  // @media screen and (max-width: 768px) {
+  //   display: flex;
+  //   gap: 50px;
+  //   align-items: center;
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   display: flex;
+  //   gap: 50px;
+  //   align-items: center;
+  // }
+}
+
+.nav__item:not(:last-child){
+  @media screen and (max-width: 767px) {
+      margin-bottom: 32px;
+    }
+  
+    @media screen and (min-width: 768px) {
+      margin-right: 50px;
+    }
 }
 
 .nav__link {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  // padding-top: 32px;
+  // padding-bottom: 32px;
   font-weight: 500;
   font-size: 14px;
   line-height: calc(16 / 14);
@@ -41,68 +61,103 @@
     display: none;
   }
 
-  @media screen and (max-width: 768px) {
-    padding-top: 0;
-    padding-bottom: 0;
-  }
+     @media screen and (min-width: 768px) {
+       font-size: 14px;
+       line-height: calc(16 / 14);}
 
-  @media screen and (min-width: 1200px) {
-  }
+  // @media screen and (max-width: 768px) {
+  //   padding-top: 0;
+  //   padding-bottom: 0;
+  // }
+
+ 
 }
 
 .link.current::after {
-  content: "";
-  display: block;
+  @media screen and (min-width: 768px) {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+  
+      content: " ";
+  
+      width: 100%;
+      height: 4px;
+  
+      border-radius: 2px;
+      background-color: var(--accent-color);
+    }
+  // content: "";
+  // display: block;
 
-  position: absolute;
-  width: 100%;
-  height: 4px;
-  bottom: -1px;
+  // position: absolute;
+  // width: 100%;
+  // height: 4px;
+  // bottom: -1px;
 
-  border-radius: 2px;
+  // border-radius: 2px;
 
-  background-color: var(--accent-color);
+  // background-color: var(--accent-color);
 
-  @media screen and (max-width: 480px) {
-    display: none;
-  }
-  @media screen and (max-width: 768px) {
-    bottom: -33px;
-  }
+  // @media screen and (max-width: 480px) {
+  //   display: none;
+  // }
+  // @media screen and (max-width: 768px) {
+  //   bottom: -33px;
+  // }
 }
 
 .nav__list .link.current {
   color: var(--accent-color);
+  
+    @media screen and (min-width: 768px) {
+      position: relative;
+  
+      display: inline-block;
+      padding-top: 32px;
+      padding-bottom: 32px;
+    }
+  // color: var(--accent-color);
 }
 
-.header__mail {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.02em;
-  color: var(--description-color);
-
-  @media screen and (max-width: 768px) {
+.header__contact{
+  display: flex;
+    align-items: center;
+    color: var(--description-color);
     font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-    margin-bottom: 10px;
-  }
+    font-size: 14px;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.02em;
+    
 }
+// .header__mail {
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: calc(16 / 14);
+//   letter-spacing: 0.02em;
+//   color: var(--description-color);
 
-.header__tel {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: calc(16 / 14);
-  letter-spacing: 0.02em;
-  color: var(--description-color);
+//   @media screen and (max-width: 768px) {
+//     font-weight: 500;
+//     font-size: 12px;
+//     line-height: 14px;
+//     margin-bottom: 10px;
+//   }
+// }
 
-  @media screen and (max-width: 768px) {
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 14px;
-  }
-}
+// .header__tel {
+//   font-weight: 500;
+//   font-size: 14px;
+//   line-height: calc(16 / 14);
+//   letter-spacing: 0.02em;
+//   color: var(--description-color);
+
+//   @media screen and (max-width: 768px) {
+//     font-weight: 500;
+//     font-size: 12px;
+//     line-height: 14px;
+//   }
+// }
 
 .header__icon-mail {
   fill: currentColor;
