--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,19 +1,30 @@
 .section {
-    padding-bottom: 60px;
+
     padding-top: 60px;
-
-    @media screen and (min-width: 786px) {
-       padding-bottom: 60px;
-       padding-top: 60px;
+        padding-bottom: 60px;
+    
+        @media screen and (min-width: 1200px) {
+            padding-top: 94px;
+            padding-bottom: 94px;
         }
+                  &--no_padding {
+                      padding-top: 0;
+                  }
+    // padding-bottom: 60px;
+    // padding-top: 60px;
 
-    @media screen and (min-width: 1200px) {
-        padding-bottom: 94px;
-        padding-top: 94px;
-    }
+    // @media screen and (min-width: 786px) {
+    //    padding-bottom: 60px;
+    //    padding-top: 60px;
+    //     }
+
+    // @media screen and (min-width: 1200px) {
+    //     padding-bottom: 94px;
+    //     padding-top: 94px;
+    // }
     
 }
 
-.section:nth-child(3){
-padding-top: 0;
-}
+// .section:nth-child(3){
+// padding-top: 0;
+// }
